# cosine-fast

./: Cargo.toml  README.md
src/: lib.rs
tests/: integration.rs
